Fixed look on mobile

--- a/styles/about.module.scss
+++ b/styles/about.module.scss
@@ -3,6 +3,7 @@
   padding-left: 30vw;
   padding-right: 30vw;
   padding-top: 15vh;
+  z-index: 20;
 }
 .part2 {
   background-color: var(--main2);
@@ -34,4 +35,12 @@
   align-items: center;
   padding: 5px;
   width: 300px;
+}
+
+@media (max-width: 768px) {
+  .part1 {
+    padding-left: 6vw;
+    padding-right: 6vw;
+    padding-top: 20vh;
+  }
 }
