--- a/styles/index.module.scss
+++ b/styles/index.module.scss
@@ -31,6 +31,6 @@
   .part1 {
     padding-left: 6vw;
     padding-right: 6vw;
-    padding-top: 10vh;
+    padding-top: 20vh;
   }
 }
